<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- Общее -->
    <string name="app_name">РосЯма</string>

    <!-- Debug: 0IzbmGe1ymUi8twasAFevEv4qJudlgqQlj28KLg -->
    <!-- Production: 0IzbmGe1ymUhFfOMljquA3K2TMf9njR8OxNuc4w -->
    <string name="map_key">0IzbmGe1ymUhFfOMljquA3K2TMf9njR8OxNuc4w</string>

<!-- Авторизация -->
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="register">Регистрация</string>

    <string name="authorize_request">Идет авторизация. Пожалуйста подождите ...</string>
    
<!-- Главное окно -->
    <string name="main_text">Сфотографируйте дефект и отправьте заявление в ГИБДД</string>
    <string name="hole_create_dialog">Сделайте фотографию и мы постараемся определить её адрес. Включение GPS и WiFi поможет повысить точность.</string>
    <string name="hole_create_label">Сообщить о дефекте</string>
    <string name="hole_list_label">Загруженные дефекты</string>
    <string name="logout">Выйти</string>

<!-- Редактирование дефекта -->
    <string name="hole_edit_title">Редактирование дефекта</string>
    <string name="address_label">Адрес дефекта</string>
    <string name="address_hint">Укажите адрес</string>
    <string name="comment_label">Комментарий</string>
    <string name="comment_hint">Укажите комментарий</string>
    <string name="type_prompt">Укажите тип дефекта</string>
    <string name="type_badroad">Разбитая дорога</string>
    <string name="type_holeonroad">Яма на дороге</string>
    <string name="type_hatch">Люк</string>
    <string name="type_rails">Рельсы</string>
    <string name="type_policeman">Лежачий полицейский</string>
    <string name="type_holeinyard">Яма во дворе</string>

    <string name="hole_send">Отправить</string>
    <string name="hole_delete">Удалить</string>

    <string name="send_request">Идет отправка дефекта. Пожалуйста подождите ...</string>
    <string name="delete_request">Идет удаление дефекта. Пожалуйста подождите ...</string>
    
<!-- Список фотографий -->
    <string name="photo_list_title">Фотографии дефекта</string>
    <string name="photo_add">Добавить фото</string>
    <string name="photo_delete">Удалить</string>
    <string name="photo_hint">Фото %d</string>
    
<!-- Карта -->
    <string name="map_title">Укажите адрес</string>
    <string name="map_hint">Введите адрес и нажмите на кнопку поиска или перетащите маркер и подождите пока определится его адрес</string>
    <string name="map_done">Сохранить</string>

<!-- Список дефектов -->
    <string name="hole_list_title">Список дефектов</string>
    <string name="status_fresh">Новые</string>
    <string name="status_inprogress">В ГИБДД</string>
    <string name="status_fixed">Устраненные</string>
    <string name="status_achtung">Просроченные</string>
    <string name="status_prosecutor">В прокуратуре</string>
    <string name="status_gibddre">С ответом</string>

    <string name="list_request">Идет получение списка дефектов. Пожалуйста подождите ...</string>
    
<!-- Просмотр дефекта -->
    <string name="hole_detail_title">Просмотр дефекта</string>
    <string name="pdf_preview">Форма заявления в ГИБДД</string>
    <string name="hole_edit">Редактировать</string>
    <string name="move_inprogress">Дефект отправлен в ГИБДД</string>
    <string name="move_fixed">Дефект устанен</string>
    
<!-- Предпросмотр PDF -->
    <string name="pdf_previed_title">Форма заявления в ГИБДД</string>
    <string name="to_label">Кому:</string>
    <string name="to_hint">Укажите должность и ФИО начальника ГИБДД в дательном падеже</string>
    <string name="from_label">От кого:</string>
    <string name="from_hint">Укажите ваше ФИО в родительном падеже</string>
    <string name="postaddress_label">Почтовый адрес заявителя с индексом:</string>
    <string name="postaddress_hint">Укажите свой почтовый адрес для переписки и получения уведомлений</string>
    <string name="signature_label">Подпись:</string>
    <string name="signature_hint">Укажите вашу фамилию и инициалы</string>
    <string name="pdf">Получить заявление</string>
    <string name="pdf_choose">Варианты отправки</string>
    <string name="pdf_dialog">Сейчас мы загрузим заявление в формате pdf. Вы сможете отправить его, например, на свою электронную почту. Полученное заявление нужно будет распечатать и отправить в местное ГИБДД.</string>

    <string name="head_request">Идет поиск главы ГИБДД. Пожалуйста подождите ...</string>
    <string name="pdf_request">Идет получение заявления. Пожалуйста подождите ...</string>

<!-- О программе -->
    <string name="about_title">О программе</string>
    <string name="about_copyright">© Redsolution LTD, 2010-2011</string>
    <string name="about_site">http://www.redsolution.ru</string>
    <string name="about_source_title"><u>Открытый исходный код</u></string>
    <string name="about_source_address">http://github.com/redsolution/rosyama</string>

<!-- Ошибки -->    
    <string name="connection_fail">Ошибка подключения.</string>
    <string name="io_fail">Ошибка передачи данных.</string>
    <string name="data_fail">Ошибка при анализе данных.</string>
    <string name="auth_fail">Не удалось авторизоваться</string>
    <string name="auth_required">Неправильный логин или пароль</string>
    
    <string name="geo_fail">Ошибка определения местоположения.</string>
    <string name="photo_fail">Ошибка обработки изображения.</string>
    <string name="hole_fail">Не удалось отправить дефект.</string>
    <string name="head_fail">Не удалось найти главу ГИБДД.</string>
    <string name="pdf_fail">Не удалось сформировать заявление. Попробуйте зайти через сайт.</string>
    <string name="cannot_add_defect">Не удалось отправить дефект: %s.</string>
    <string name="server_error">Сервер сообщает об ошибке: %s.</string>

<!-- Настройки -->    
    <string name="login_key">login</string>
    <string name="password_key">password</string>
    <string name="from_key">from</string>
    <string name="signature_key">signature</string>
    <string name="postaddress_key">postaddress</string>
</resources>
