<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_repeat"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:id="@+id/to_panel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_with_arrow"
            android:focusable="true"
            >
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:textColor="#222"
                android:text="@string/to_label"
                />
            <TextView
                android:id="@+id/to"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/from_panel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_with_arrow"
            android:focusable="true"
            >
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:textColor="#222"
                android:text="@string/from_label"
                />
            <TextView
                android:id="@+id/from"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/postaddress_panel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_with_arrow"
            android:focusable="true"
            >
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:textColor="#222"
                android:text="@string/postaddress_label"
                />
            <TextView
                android:id="@+id/postaddress"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="#000"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/signature_panel"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_with_arrow"
            android:focusable="true"
            >
            <TextView
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:textColor="#222"
                android:text="@string/signature_label"
                />
            <TextView
                android:id="@+id/signature"
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content"
                android:textColor="#000"
                />
        </LinearLayout>
        <Button
            android:id="@+id/request"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:layout_margin="4dip"
            android:text="@string/pdf"
            />
    </LinearLayout>
</ScrollView>